# DiscordChatGPTBot

./: .gitignore  CODEOWNERS  Dockerfile  README.md  config.py  example_conf.toml  main.py  make-data-better.py  pyproject.toml  run.sh  train.py
bot/: bot.py  constants.py
chat_ai/: chatai.py  chatai_handler.py  custom_chatai.py
conf/: config_handler.py  config_types.py
conf_handler/: config_handler.py  config_types.py
