[tool.poetry]
name = "biglez"
version = "0.1.0"
description = ""
authors = ["NickBrisebois <nickbrisebois12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.17.1"
discord = "^2.3.2"

# [[tool.poetry.source]]
# name = "pytorch_cpu"
# url = "https://download.pytorch.org/whl/cpu"
# priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
